--- a/test/fixtures/books.yml
+++ b/test/fixtures/books.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  title: MyString
-  memo: MyText
+cherry_book:
+  title: ルビー入門
+  memo: いい。
 
-two:
-  title: MyString
-  memo: MyText
+# two:
+#   title: MyString
+#   memo: MyText
